--- a/index.html
+++ b/index.html
@@ -2,15 +2,68 @@
 <html lang="es">
 
 <head>
-    <title>Tech</title>
+
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Tech | Importador y distribuidor de hardware en Uruguay.">
+    <meta name="keywords"
+        content="notebooks, computadoras, tarjeta de video, monitores, equipos, discos duros, motherboards, tecnología, gabinetes, xbox, play station, procesador, informática, tienda, digital">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Tech">
+    <meta name="robots" content="index, follow">
+    <meta name="lenguage" content="es_UY.UTF-8">
+    <meta itemprop="genre" content="Store">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <title>
+        Tienda Tech
+    </title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 
 </head>
 
+
+
+
 <body>
 
+    <header>
+        HEADER
+    </header>
+
+    <main>
+        MAIN
+    </main>
+
+    <footer>
+        FOOTER
+    </footer>
+
+
+
+    <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
+    </script>
+    <script>
+        AOS.init()
+    </script>
+
 </body>
+
+
+
+
 
 </html>
