--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>
-        Banifox
+        Carrito de Compras - Banifox
     </title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -45,7 +45,7 @@
 
                         <div>
                             <a href="#">
-                                <img src="./assets/images/logoGeForce.jpg" alt="Mini logo GeForce">
+                                <img src="../assets/images/logoGeForce.jpg" alt="Mini logo GeForce">
                             </a>
 
                         </div>
@@ -86,8 +86,8 @@
 
                         <h1 class="card-title">
 
-                            <a href="./index.html">
-                                <img src=" ./assets/images/logo.png" alt="Logo">
+                            <a href="../index.html">
+                                <img src=" ../assets/images/logo.png" alt="Logo">
                             </a>
 
                         </h1>
@@ -142,8 +142,8 @@
                             placeholder="¿Qué buscás?">
 
                         <button class="btn" type="submit">
-                            <a href="">
-                                <img class="rounded-circle" src="./assets/images/lupa.jpg" alt="Imagen de Lupa">
+                            <a href="#">
+                                <img class="rounded-circle" src="../assets/images/lupa.jpg" alt="Imagen de Lupa">
                             </a>
                         </button>
 
@@ -202,7 +202,7 @@
 
                 </div>
 
-                <div class="col-6 navbarSecciones">
+                <div class="col-8 navbarSecciones">
                     <nav class="navbar navbar-expand-lg navbar-dark ">
 
                         <div class="container-fluid">
@@ -219,6 +219,8 @@
                             <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
 
                                 <ul class="navbar-nav">
+
+
 
                                     <li class="nav-item">
                                         <div class="nav-link">
@@ -252,6 +254,7 @@
                                         </div>
                                     </li>
 
+
                                 </ul>
 
                             </div>
@@ -262,54 +265,61 @@
 
                 </div>
 
-                <div class="col-2 d-flex justify-content-end ms-5 carrito">
-                    <a href="./pages/carrito.html">
-                        <span class="me-1 ">0,00</span>
-                        <i class="fa-sharp fa-solid fa-cart-shopping fa-xl"></i>
-                    </a>
-                </div>
-
             </div>
 
         </div>
 
-    </header>
-
-    <header class="container-fluid shadow" id="carousel">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./assets/images/carousel/Imagen1Carousel.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/carousel/Imagen2Carousel.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/carousel/Imagen3Carousel.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/carousel/Imagen4Carousel.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./assets/images/carousel/Imagen5Carousel.jpg" class="d-block w-100" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
     </header>
 
     <main class="container" id="main">
 
+        <div class="row align-items-center">
 
+            <div class="col d-flex justify-content-center">
+
+                <h2>
+                    Mi Compra
+                </h2>
+
+            </div>
+
+        </div>
+
+        <div class="row align-items-center navCarrito">
+            <div class="col d-flex justify-content-center">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a class="nav-link numeroNavCarrito" href="#">1</a>
+                    </li>
+                    <li class="nav-item textoNavCarrito opacidadNavCarrito">
+                        <a class="nav-link" href="#">
+                            Carrito de compras
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link numeroNavCarrito " href="#">
+                            2
+                        </a>
+                    </li>
+                    <li class="nav-item textoNavCarrito opacidadNavCarrito">
+                        <a class="nav-link" href="#">
+                            Dirección y Formas de
+                            pago
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link numeroNavCarrito " href="#">
+                            <i class="fa-solid fa-check fa-lg"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item textoNavCarrito opacidadNavCarrito">
+                        <a class="nav-link" href="#">
+                            Pedido realizado
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     </main>
 
@@ -323,9 +333,9 @@
 
                     <div class="card-body">
 
-                        <a class="card-title">
+                        <a class="card-title" href="../index.html">
 
-                            <img class="mb-3" src="./assets/images/logo.png" alt="">
+                            <img class="mb-3" src="../assets/images/logo.png" alt="">
 
                         </a>
 
@@ -393,7 +403,7 @@
 
 
 
-    <script src="./js/app.js"></script>
+    <script src="../js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
     </script>
