Se agregan opciones nuevas y se agregan comentarios

--- a/index.html
+++ b/index.html
@@ -8,17 +8,20 @@
     <meta name="keywords"
         content="notebooks, computadoras, tarjeta de video, monitores, equipos, discos duros, motherboards, tecnología, gabinetes, xbox, play station, procesador, informática, tienda, digital">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link type="image/x-icon" href="./assets/images/favicon/favicon.ico" rel="shortcut icon">
     <meta name="author" content="Banifox">
     <meta name="robots" content="index, follow">
     <meta name="lenguage" content="es_UY.UTF-8">
     <meta itemprop="genre" content="Store">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+
     <title>
         Banifox
     </title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
